--- a/app/routes/_index/_index.module.scss
+++ b/app/routes/_index/_index.module.scss
@@ -15,6 +15,8 @@
 .title {
     font: var(--large-font);
     color: var(--black);
+    outline: gold solid 10px;
+    box-shadow: inset -2.31px 1.92px 19px 30px var(--secondary);
 }
 
 .paragraph {
