--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -3,4 +3,5 @@
     --large-font: 700 8vw/1.2 var(--my-prettyfont);
     --small-font: 200 5vw/1.4 var(--my-prettyfont);
     --paragraph-font: 200 3vw/1.3 var(--my-prettyfont);
+    --monacococococo: Monaco, monospace;
 }
