--- a/app/routes/another pageeee/route.module.scss
+++ b/app/routes/another pageeee/route.module.scss
@@ -100,3 +100,21 @@
 .heroImageExploreButton:hover {
     background-color: #848484;
 }
+.img4 {
+    width: 150px;
+}
+.img5 {
+    width: 150px;
+}
+.img6 {
+    width: 150px;
+}
+.img7 {
+    width: 100px;
+}
+.img8 {
+    width: 120px;
+}
+.img9 {
+    width: 133px;
+}
