add multiple pages and comps that check stuff

--- a/app/routes/_index/route.module.scss
+++ b/app/routes/_index/route.module.scss
@@ -46,3 +46,7 @@
     background-color: var(--blublu);
     font-family: var(--monacococococo);
 }
+.img1 {
+    max-width: 150px;
+    max-height: 150px;
+}
